# golden_gate

./: .env.example  .gitignore  DEMO_SCRIPT.md  README.md  implementation_plan.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.claude/: claude.md
.cursor/: claude.mdc  coding_style.mdc
backend/: __init__.py  config.py  main.py  parse_cli.py  requirements.txt  test_parsers.py
backend/graphs/: __init__.py  offboarding_graph.py  onboarding_graph.py  registry.py
backend/models/: __init__.py  artifacts.py  questions.py  state.py
backend/nodes/: __init__.py  build_index.py  build_qa_context.py  concatenate.py  deep_dive.py  generate_package.py  global_summarize.py  interview.py  parse_files.py  (+1 more)
data/: Board_Risk_Committee_Deck.pptx  IntegrationMeeting_Notes_v2.txt  Integration_Risk_Log_v2.xlsx  Ops_Workflows_v2.docx  Past_Deals_v2.xlsx  Q3_2024_forecast.xlsx  Q3_board_risk_memo_draft.docx  README.md  XCorp_DealMemo.docx  XCorp_DealMemo_v2.docx  XCorp_Valuation_v2.xlsx  board_risk_presentation.pptx  loss_model.py  model_methodology.docx  policy_compliant_queries.sql  portfolio_risk.db  risk_queries.sql  segments.csv  stress_testing.ipynb  workflow.txt
data_delivery/: .gitignore  create_graph.py  kg.py  neo4j_.py  run.py
docs/: 1_parsing.md  2_deep_dive_analysis.md  3_question_generation.md  4_interview_loop.md  5_interview_summary.md  KG.md  general_design.md  how_to_run.md  implementation_design.md  implementation_plan.md  node_interfaces.md  onboarding_qa_loop.md  progress.md
scripts/: generate_demo_data.py  test_e2e.py
tasks/: todo.md
(+117 files in other folders)
