[project]
name = "golden-gate"
version = "0.1.0"
description = "Offboarding → Onboarding knowledge capture agent"
requires-python = ">=3.11"

dependencies = [
    # --- LLM & Orchestration ---
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "openai>=1.60",

    # --- Backend API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2",

    # --- File Parsers (existing) ---
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
    "nbformat>=5.9.0",
    "sqlglot>=20.0.0",
    "pymupdf4llm>=0.0.5",
    "python-pptx>=0.6.21",

    # --- Vector Store & Embeddings ---
    "chromadb>=0.6",

    # --- Utilities ---
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",

    # --- Testing ---
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[project.scripts]
serve = "backend.main:start"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
